Reorder help menu and added % to all wounds

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -835,7 +835,7 @@
     [while]
         {VARIABLE_CONDITIONAL rand_wound_repeat equals yes}
         [do]
-            {VARIABLE_OP rand_wound rand "1..97"}
+            {VARIABLE_OP rand_wound rand "1..100"}
             [switch]
                 variable=rand_wound
                 [case]
@@ -1382,22 +1382,22 @@
                     {VARIABLE rand_wound_repeat no}
                 [/case]
                 [case]
-                    value=86,87,88,89
+                    value=86,87,88,89,90,91,92
                     [if]
                         [have_location]
                             {EVENT_UNIT}
                             [filter]
-                                formula="experience < (max_experience / 1.5)"
+                                formula="experience > (max_experience / 1.5)"
                             [/filter]
                         [/have_location]
-                        [else]
+                        [then]
                             {NFW_short_term_memory_loss_WOUND}
                             {VARIABLE rand_wound_repeat no}
-                        [/else]
+                        [/then]
                     [/if]
                 [/case]
                 [case]
-                    value==90,91,92,93
+                    value==93,94,95,96
                     [if]
                         [have_location]
                             {EVENT_UNIT}
@@ -1414,7 +1414,7 @@
                     [/if]
                 [/case]
                 [case]
-                    value=94,95,96,97
+                    value=97,98,99,100
                     [if]
                         [have_location]
                             {EVENT_UNIT}
