--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -1259,7 +1259,7 @@ Face your fears to try to overcome them."
                         name="<span color='#DA0000'>"+_"paper cut"+"</span>"
                         description=_"Due to the intense pain from your cut you cant concentrait on the fight.
 
-All damage is reduced by 20% and blade resistance is lowered by 30%. You will never recover from this."
+All damage is reduced by 20% and blade resistance is lowered by 30%"
                     [/display]
                 [/abilities]
             [/effect]
@@ -1292,7 +1292,7 @@ All damage is reduced by 20% and blade resistance is lowered by 30%. You will ne
                         name="<span color='#DA0000'>"+_"lego"+"</span>"
                         description=_"Due to the intense pain of stepping on plastic brick you cant walk properly.
 
-Movement is reduced by 20% and accuracy is reduced by 15%. You will never recover from this."
+Movement is reduced by 20% and accuracy is reduced by 15%"
                     [/display]
                 [/abilities]
             [/effect]
@@ -1307,6 +1307,53 @@ Movement is reduced by 20% and accuracy is reduced by 15%. You will never recove
         [/object]
     [/modify_unit]
     {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Stepped on Lego" {NFW_COLOR_RED}}
+#enddef
+
+#define NFW_dumb_WOUND
+    [modify_unit]
+        {FILTER_EVENT_UNIT}
+        [object]
+            id=dumb
+            [effect]
+                apply_to=new_ability
+                [abilities]
+                    [display]
+                        id=dumb_display
+                        name="<span color='#DA0000'>"+_"dumb"+"</span>"
+                        description=_"Se quedó tan tonto de la última pedrada, que ya no sabe cuándo atacar.
+20% de posibilidades de quedarse sin atacar un turno."
+                    [/display]
+                [/abilities]
+            [/effect]
+        [/object]
+    [/modify_unit]
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Idiotize" {NFW_COLOR_RED}}
+#enddef
+
+#define NFW_jinx_WOUND
+    [modify_unit]
+        {FILTER_EVENT_UNIT}
+        [object]
+            id=jinx
+            [effect]
+                apply_to=new_ability
+                [abilities]
+                    [chance_to_hit]
+                        id=nfw_jinx
+                        name="<span color='#DA0000'>"+_"jinx"+"</span>"
+						female_name= "<span color='#DA0000'>"+_"female^jinx"+"</span>"
+                        description=_"He brings such bad luck around him, that all allied adjacent units will have their chance to hit halved."
+						divide=2
+						cumulative=no
+						affect_self=no
+						[affect_adjacent]
+						[/affect_adjacent]
+					[/chance_to_hit]
+                [/abilities]
+            [/effect]
+        [/object]
+    [/modify_unit]
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Jinx" {NFW_COLOR_RED}}
 #enddef
 
 #define NFW_TRAIT_UNDEAD
