--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -36,6 +36,7 @@
         image="misc/nfw-icon.png"
         [option]
             label="<b>»</b> "+_"Change status of Wounds"
+            default=yes
             [command]
                 [message]
                     speaker=narrator
@@ -131,40 +132,51 @@
             [/command]
         [/option]
         [option]
-            label="<b>»</b> "+_"List of Wounds"
-            default=yes
+            label="<b>»</b> "+_"List of physical wounds"
             [command]
                 [message]
                     speaker=narrator
-                    font_size=smaller
-                    message=_"* <b><i>Wound</i> (effect) > Possible destination units, previous conditions, cumulative</b>
+                    message=_"* <b><i>Wound</i> (effect) > Possible destination units, previous conditions, cumulative, percentaje if all conditions are met - with additional conditions</b>
 
-* <b><i>Amnesia</i></b> (loses 2 xp/turn) > All units, random
-* <b><i>Short-term memory loss</i></b> (resets experience) > Units with more than 3/4 of the max experience, random
-* <b><i>Broken arm</i></b> (-30% non-magical damage) > Races with arms, random, cumulative
-* <b><i>Broken wing</i></b> (-40% mp) > Races with wings, random, cumulative
-* <b><i>Broken leg</i></b> (-30% mp) > Races with legs, random, cumulative
-* <b><i>Broken rib</i></b> (-40% impact resistance) > Not mechanical or spirits, random but more probable with impact attack, cumulative
-* <b><i>Burn</i></b> (-40% fire resistance) > All units, wounded with fire attack or on a terrain with lava or fire, cumulative
-* <b><i>Capture</i></b> (increased recall cost based on level) > All units, random but more probable on leaders and heroes
-* <b><i>Concussion</i></b> (-30% magical damage) > Units with magical attacks, random, cumulative
-* <b><i>Wild magic</i></b> (magical attacks now are 40% chance) > Units with magical attacks, random
-* <b><i>Cowardice</i></b> (-20% accuracy) > Not mechanical, random, cumulative
-* <b><i>Fear of weapon</i></b> (-50% strikes and -30% accuracy against what wounded them) > Not mechanical, any weapon
-* <b><i>Fear of enemy</i></b> (-50% strikes and -30% accuracy against the type of unit that wound them) > Not mechanical, any type of enemy
-* <b><i>Fear of the dark/light</i></b> (-50% strikes during the time they were wounded) > Not mechanical, wounded on day, night, or underground, mutually exclusive
-* <b><i>Fear of terrain</i></b> (increased 1-2 move cost for the terrain they were wounded on) > Not mechanical, wounded on some terrains, cumulative
-* <b><i>Fear of fog</i></b> (-50% mp when fog is active) > Not mechanical, wounded with fog active, cumulative
-* <b><i>Frostbite</i></b> (-40% cold resistance) > All units, wounded with ice attack or on a cold terrain, cumulative
-* <b><i>Gash</i></b> (-40% blade resistance) > All units, wounded with blade attack, cumulative
-* <b><i>Infection</i></b> (20% chance to be poisoned every turn) > Not unpoisonable, random but more probable if poisoned
-* <b><i>Sickness</i></b> (30% chance of being slowed every turn) > Not mechanical, random but more probable if slowed
-* <b><i>Insanity</i></b> (berserk on melee attacks) > Not mechanical, without berserk ability
-* <b><i>Mutilation</i></b> (-30% hp) > Not mechanical, random, cumulative
-* <b><i>Necrosis</i></b> (-40% arcane resistance) > Not mechanical, random, cumulative
-* <b><i>Rot</i></b> (-20% arcane and impact resistance) > Mechanical, random but more probable with impact or arcane attack, cumulative
-* <b><i>Damage</i></b> (-10% mp, hp, damage and accuracy) > Mechanical, random, cumulative
-* <b><i>Lost</i></b> (equivalent to death) > Units non unplagueables, killed with plague attack, allways"
+* <b><i>Broken arm</i></b> (-30% non-magical damage) > Races with arms, random, cumulative, 1%
+* <b><i>Broken wing</i></b> (-40% mp) > Races with wings, random, cumulative, 5%
+* <b><i>Broken leg</i></b> (-30% mp) > Races with legs, random, cumulative, 1%
+* <b><i>Broken rib</i></b> (-40% impact resistance) > Not mechanical or spirits, random, cumulative, 1% - 4% with impact attack
+* <b><i>Burn</i></b> (-40% fire resistance) > All units, wounded with fire attack or on a terrain with lava or fire, cumulative, 10% - 20% mechanical
+* <b><i>Capture</i></b> (increased recall cost based on level) > All units, random, 1% - 10% mechanical - 25% leaders and heroes
+* <b><i>Frostbite</i></b> (-40% cold resistance) > All units, wounded with ice attack or on a cold terrain, cumulative, 6% - 20% mechanical
+* <b><i>Gash</i></b> (-40% blade resistance) > All units, wounded with blade attack, cumulative, 4% - 20% mechanical
+* <b><i>Infection</i></b> (20% chance to be poisoned every turn) > Not unpoisonable, random, 1% - 33% on poisoned status
+* <b><i>Sickness</i></b> (30% chance of being slowed every turn) > Not mechanical, random, 1% - 33% on slowed status
+* <b><i>Mutilation</i></b> (-30% hp) > Not mechanical, random, cumulative, 2%
+* <b><i>Necrosis</i></b> (-40% arcane resistance) > Not mechanical, random, cumulative, 1%
+* <b><i>Rot</i></b> (-20% arcane and impact resistance) > Mechanical, random but more probable with impact or arcane attack, cumulative, 10%
+* <b><i>Damage</i></b> (-10% mp, hp, damage and accuracy) > Mechanical, random, cumulative, 50%
+* <b><i>Lost</i></b> (equivalent to death) > Units non unplagueables, killed with plague attack, 100%"
+                    side_for=$side_number
+                    image="misc/nfw-icon.png"
+                    {NFW_MENU_EXIT}
+                [/message]
+            [/command]
+        [/option]
+        [option]
+            label="<b>»</b> "+_"List of psychological wounds"
+            [command]
+                [message]
+                    speaker=narrator
+                    message=_"* <b><i>Wound</i> (effect) > Possible destination units, previous conditions, cumulative, percentaje if all conditions are met - with additional conditions</b>
+
+* <b><i>Amnesia</i></b> (loses 2 xp/turn) > All units, random, 1% - ~&lt;10% mechanical
+* <b><i>Short-term memory loss</i></b> (resets experience) > Units with more than 3/4 of the max experience, random, ~&lt;10% - ~&lt;25% mechanical
+* <b><i>Concussion</i></b> (-30% magical damage) > Units with magical attacks, random, cumulative, 3%
+* <b><i>Wild magic</i></b> (magical attacks now are 40% chance) > Units with magical attacks, random, 2%
+* <b><i>Cowardice</i></b> (-20% accuracy) > Not mechanical, random, cumulative, 1%
+* <b><i>Fear of weapon</i></b> (-50% strikes and -30% accuracy against what wounded them) > Not mechanical, any weapon, 3%
+* <b><i>Fear of enemy</i></b> (-50% strikes and -30% accuracy against the type of unit that wound them) > Not mechanical, any type of enemy, 4%
+* <b><i>Fear of the dark/light</i></b> (-50% strikes during the time they were wounded) > Not mechanical, wounded on day, night, or underground, mutually exclusive, 1%
+* <b><i>Fear of terrain</i></b> (increased 1-2 move cost for the terrain they were wounded on) > Not mechanical, wounded on some terrains, cumulative, 4% - 2% agoraphobia
+* <b><i>Fear of fog</i></b> (-50% mp when fog is active) > Not mechanical, wounded with fog active, cumulative, 4%
+* <b><i>Insanity</i></b> (berserk on melee attacks) > Not mechanical, without berserk ability, 1%"
                     side_for=$side_number
                     image="misc/nfw-icon.png"
                     {NFW_MENU_EXIT}
@@ -173,7 +185,6 @@
         [/option]
         [option]
             label="<b>»</b> "+_"List of healing methods"
-            default=yes
             [command]
                 [message]
                     speaker=narrator
@@ -209,10 +220,10 @@
  "+_"(0 = Deactivated, 1 = Death, 2 = Death + Undeath)"+"
 
 "+_"<b>Wounds list:</b>
-* <b><i>Death</i></b> (definitive death)
-* <b><i>Destruction</i></b> (definitive death)
-* <b><i>Turning into a ghost</i></b>: -60% HP; -30% general attack damage; spirit type movement, defenses and resistances; chaotic alignment; ranged attack changed to cold if not magical, arcane or fire; melee attack changed to arcane, with drain, and with -25% damage if not magical, cold, fire or arcane > Units that are not already spirits or ghosts
-* <b><i>Turning into a zombie</i></b>: -40% HP, -30% general attack damage, -30% movement, -50% magical attacks strikes, low arcane resistance, chaotic alignment and fearless, plague on melee, and poor markmanship on marksmans > Units that are not already undead"
+* <b><i>Death</i></b>: Definitive death, 33% chance - 20% with Undeath active
+* <b><i>Destruction</i></b>: Definitive death for mechanic units, 20% chance
+* <b><i>Turning into a ghost</i></b>: -60% HP; -30% general attack damage; spirit type movement, defenses and resistances; chaotic alignment; ranged attack changed to cold if not magical, arcane or fire; melee attack changed to arcane, with drain, and with -25% damage if not magical, cold, fire or arcane > Units that are not already spirits or ghosts; 5% chance
+* <b><i>Turning into a zombie</i></b>: -40% HP, -30% general attack damage, -30% movement, -50% magical attacks strikes, low arcane resistance, chaotic alignment and fearless, plague on melee, and poor markmanship on marksmans > Units that are not already undead, 10% chance"
         side_for=$side_number
         image="misc/nfw-icon.png"
         [option]
@@ -307,7 +318,7 @@
 * <b><i><span color='#963296'>Arcane elemental</span></i></b> +30% arcane resistance +All attacks changed to arcane -30% damage -40% HP > Units with arcane attacks, or wounded with arcane, or on a terrain with ethereal abyss = 8 HP when either the attacker or defender are in a terrain with ethereal abyss, once per attack
 * <b><i><span color='#7D3C00'>Earth elemental</span></i></b> +30% impact resistance +All attacks changed to impact -25% damage -30% HP -20% MP > Units with impact attacks, or wounded with impact, or on a cave terrain = 2 HP when either the attacker or defender are in a cave terrain, once per attack
 * <b><i><span color='#00FFFF'>Air elemental</span></i></b> +40% blade +20% pierce +20% impact resistance +All attacks changed to blade +30% MP -40% damage -60% HP > Units with blade attacks, or birds, falcons, gryphon, bats, or wounded with blade, or on a terrain with windmill = 4 HP when either the attacker or defender are in a terrain with windmill, once per attack
-* <b><i>All elementals</i></b> > Mechanical, undead, ghosts, spirits and elemental units can't receive any elemental wound, and no unit can received it twice"
+* <b><i>All elementals</i></b> > Mechanical, undead, ghosts, spirits and elemental units can't receive any elemental wound, and no unit can received it twice, ~&lt;15% chance if conditions are met"
                     image="misc/nfw-icon.png"
                     {NFW_MENU_EXIT}
                 [/message]
@@ -325,8 +336,8 @@
 "+"<b><span color='#00E600'>"+_"Set to"+": "+"</span><span color='#00FFFF'>"+"{STATUS}"+"</span></b>"+"
 
 "+_"<b>Wounds list:</b>
-* <b><i>Paper cut</i></b> (-20% to all damage and -30% blade resistance) > All units
-* <b><i>Stepping on a Lego</i></b> (-20% mp and -15% accuracy) > All units"
+* <b><i>Paper cut</i></b> (-20% to all damage and -30% blade resistance) > All units - 10% chance
+* <b><i>Stepping on a Lego</i></b> (-20% mp and -15% accuracy) > All units - 10% chance"
         side_for=$side_number
         image="misc/nfw-icon.png"
         [option]
