--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -5,8 +5,9 @@
     name=last_breath
     id=nfwme_store_variables
     first_time_only=no
-    {VARIABLE nfwme_rand_weapon_type $second_weapon.type}
-    {VARIABLE nfwme_rand_scary_weapon $second_weapon.name}
+    {VARIABLE nfw_weapon_type $second_weapon.type}
+    {VARIABLE nfw_scary_weapon $second_weapon.name}
+    {VARIABLE nfw_scary_weapon_translated $second_weapon.description}
     [store_unit_type]
         type=$unit.type
         variable=nfwe_unit_type
@@ -140,13 +141,13 @@
         [case]
             value=12,13,14,15
             [if]
-                {VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals fire}
+                {VARIABLE_CONDITIONAL nfw_weapon_type equals fire}
                 [then]
                     {NFW_burned_WOUND}
                     {VARIABLE nfw_already_wound yes}
                 [/then]
                 [elseif]
-                    {VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals ice}
+                    {VARIABLE_CONDITIONAL nfw_weapon_type equals ice}
                     [then]
                         {NFW_frostbite_WOUND}
                         {VARIABLE nfw_already_wound yes}
@@ -173,9 +174,9 @@
                     [/then]
                 [/elseif]
                 [elseif]
-                    {VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals impact}
+                    {VARIABLE_CONDITIONAL nfw_weapon_type equals impact}
                     [or]
-                        {VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals arcane}
+                        {VARIABLE_CONDITIONAL nfw_weapon_type equals arcane}
                     [/or]
                     [then]
                         {NFW_rotten_WOUND}
@@ -183,7 +184,7 @@
                     [/then]
                 [/elseif]
                 [elseif]
-                    {VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals blade}
+                    {VARIABLE_CONDITIONAL nfw_weapon_type equals blade}
                     [then]
                         {NFW_gash_WOUND}
                         {VARIABLE nfw_already_wound yes}
@@ -388,7 +389,7 @@
                     [/have_location]
                 [/or]
                 [or]
-                    {VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals arcane}
+                    {VARIABLE_CONDITIONAL nfw_weapon_type equals arcane}
                 [/or]
                 [then]
                     {NFW_elemental_arcane_WOUND}
@@ -399,7 +400,7 @@
         [case]
             value=3
             [if]
-                {VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals pierce}
+                {VARIABLE_CONDITIONAL nfw_weapon_type equals pierce}
                 [or]
                     [have_location]
                         {EVENT_UNIT}
@@ -437,7 +438,7 @@
         [case]
             value=4
             [if]
-                {VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals blade}
+                {VARIABLE_CONDITIONAL nfw_weapon_type equals blade}
                 [or]
                     [have_location]
                         {EVENT_UNIT}
@@ -471,7 +472,7 @@
         [case]
             value=5,6
             [if]
-                {VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals fire}
+                {VARIABLE_CONDITIONAL nfw_weapon_type equals fire}
                 [or]
                     [have_location]
                         {EVENT_UNIT}
@@ -497,7 +498,7 @@
         [case]
             value=7,8
             [if]
-                {VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals cold}
+                {VARIABLE_CONDITIONAL nfw_weapon_type equals cold}
                 [or]
                     [have_location]
                         {EVENT_UNIT}
@@ -523,7 +524,7 @@
         [case]
             value=9,10
             [if]
-                {VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals impact}
+                {VARIABLE_CONDITIONAL nfw_weapon_type equals impact}
                 [or]
                     [have_location]
                         {EVENT_UNIT}
@@ -580,7 +581,7 @@
                     [/then]
                 [/elseif]
                 [elseif]
-                    {VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals fire}
+                    {VARIABLE_CONDITIONAL nfw_weapon_type equals fire}
                     [or]
                         [have_location]
                             {EVENT_UNIT}
@@ -593,14 +594,14 @@
                     [/then]
                 [/elseif]
                 [elseif]
-                    {VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals arcane}
+                    {VARIABLE_CONDITIONAL nfw_weapon_type equals arcane}
                     [then]
                         {NFW_elemental_arcane_WOUND}
                         {VARIABLE nfw_already_wound yes}
                     [/then]
                 [/elseif]
                 [elseif]
-                    {VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals cold}
+                    {VARIABLE_CONDITIONAL nfw_weapon_type equals cold}
                     [or]
                         [have_location]
                             {EVENT_UNIT}
@@ -699,7 +700,7 @@
                     [/then]
                 [/elseif]
                 [elseif]
-                    {VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals impact}
+                    {VARIABLE_CONDITIONAL nfw_weapon_type equals impact}
                     [or]
                         [have_location]
                             {EVENT_UNIT}
@@ -716,7 +717,7 @@
                     [/then]
                 [/elseif]
                 [elseif]
-                    {VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals blade}
+                    {VARIABLE_CONDITIONAL nfw_weapon_type equals blade}
                     [or]
                         [have_location]
                             {EVENT_UNIT}
@@ -733,7 +734,7 @@
                     [/then]
                 [/elseif]
                 [elseif]
-                    {VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals pierce}
+                    {VARIABLE_CONDITIONAL nfw_weapon_type equals pierce}
                     [or]
                         [have_location]
                             {EVENT_UNIT}
@@ -1031,7 +1032,7 @@
                 [case]
                     value=9,10,11,12,13,14
                     [if]
-                        {VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals ice}
+                        {VARIABLE_CONDITIONAL nfw_weapon_type equals ice}
                         [or]
                             [have_location]
                                 {EVENT_UNIT}
@@ -1074,7 +1075,7 @@
                 [case]
                     value=17,18,19,20,21,22,23,24,25
                     [if]
-                        {VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals fire}
+                        {VARIABLE_CONDITIONAL nfw_weapon_type equals fire}
                         [or]
                             [have_location]
                                 {EVENT_UNIT}
@@ -1175,7 +1176,7 @@
                 [case]
                     value=33,34,35
                     [if]
-                        {VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals impact}
+                        {VARIABLE_CONDITIONAL nfw_weapon_type equals impact}
                         {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type not_equals undeadspirit}
                         [then]
                             {NFW_broken_rib_WOUND}
@@ -1196,7 +1197,7 @@
                 [case]
                     value=37,38,39,40
                     [if]
-                        {VARIABLE_CONDITIONAL nfwme_rand_weapon_type equals blade}
+                        {VARIABLE_CONDITIONAL nfw_weapon_type equals blade}
                         [then]
                             {NFW_gash_WOUND}
                             {VARIABLE rand_wound_repeat no}
