--- a/utils/Wounds.cfg
+++ b/utils/Wounds.cfg
@@ -391,7 +391,7 @@ Redeem yourself by defeating an opponent with at least 1 level higher than you o
                     [display]
                         id=nfw_scared_of_weapon
                         name="<span color='#DA0000'>"+_"weakness"+"</span>"
-                        description=_"-50% strikes and -30% accuracy when facing an enemy with $second_weapon.description|.
+                        description=_"-50% strikes and -30% accuracy when facing an enemy with $nfw_scary_weapon_translated|.
 Face your fears and defeat them to try to overcome them."
                     [/display]
                 [/abilities]
@@ -404,7 +404,7 @@ Face your fears and defeat them to try to overcome them."
                         id=nfw_scared_of_weapon_attacks
                         [filter_opponent]
                             [has_attack]
-                                name=$nfwme_rand_scary_weapon
+                                name=$nfw_scary_weapon
                             [/has_attack]
                         [/filter_opponent]
                         divide=2
@@ -413,7 +413,7 @@ Face your fears and defeat them to try to overcome them."
                         id=nfw_scared_of_weapon_chance
                         [filter_opponent]
                             [has_attack]
-                                name=$nfwme_rand_scary_weapon
+                                name=$nfw_scary_weapon
                             [/has_attack]
                         [/filter_opponent]
                         sub=30
@@ -423,15 +423,15 @@ Face your fears and defeat them to try to overcome them."
         [/object]
         [set_variable]
             name=scary_weapon
-            value=$nfwme_rand_scary_weapon
+            value=$nfw_scary_weapon
         [/set_variable]
         [set_variable]
             name=scary_weapon_translated
-            value=$second_weapon.description
+            value=$nfw_scary_weapon_translated
         [/set_variable]
     [/modify_unit]
 
-    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Scared of $second_weapon.description" {NFW_COLOR_RED}}
+    {NFW_FLOAT_TEXT_CONDITIONAL $x1 $y1 _"Scared of $nfw_scary_weapon_translated" {NFW_COLOR_RED}}
 #enddef
 
 # only can get one, to avoid variable conflicts
