--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -60,8 +60,8 @@
         id=Sister Thera,Father Morvin
         formula=hitpoints < 1
     [/filter]
-    {VARIABLE nfwme_rand_scary_weapon $second_weapon.name}
-    {VARIABLE nfwme_rand_weapon_type $second_weapon.type}
+    {VARIABLE nfw_scary_weapon $second_weapon.name}
+    {VARIABLE nfw_weapon_type $second_weapon.type}
     [if]
         {NFW_wounds_DISABLED}
         [or]
@@ -95,8 +95,8 @@
         id=Sister Thera,Father Morvin
         formula=$second_unit.hitpoints < 1
     [/filter_second]
-    {VARIABLE nfwme_rand_scary_weapon $weapon.name}
-    {VARIABLE nfwme_rand_weapon_type $weapon.type}
+    {VARIABLE nfw_scary_weapon $weapon.name}
+    {VARIABLE nfw_weapon_type $weapon.type}
     [if]
         {NFW_wounds_DISABLED}
         [or]
