--- a/utils/help_menu.cfg
+++ b/utils/help_menu.cfg
@@ -150,7 +150,7 @@
 * <b><i>Sickness</i></b> (30% chance of being slowed every turn) > Not mechanical, random, 1% - 33% on slowed status
 * <b><i>Mutilation</i></b> (-30% hp) > Not mechanical, random, cumulative, 2%
 * <b><i>Necrosis</i></b> (-40% arcane resistance) > Not mechanical, random, cumulative, 1%
-* <b><i>Rot</i></b> (-20% arcane and impact resistance) > Mechanical, random but more probable with impact or arcane attack, cumulative, 10%
+* <b><i>Rot</i></b> (-20% arcane and impact resistance) > Mechanical, random, cumulative, 10% - 30% with impact or arcane attack
 * <b><i>Damage</i></b> (-10% mp, hp, damage and accuracy) > Mechanical, random, cumulative, 50%
 * <b><i>Lost</i></b> (equivalent to death) > Units non unplagueables, killed with plague attack, 100%"
                     side_for=$side_number
@@ -167,7 +167,7 @@
                     message=_"* <b><i>Wound</i> (effect) > Possible destination units, previous conditions, cumulative, percentaje if all conditions are met - with additional conditions</b>
 
 * <b><i>Amnesia</i></b> (loses 2 xp/turn) > All units, random, 1% - ~&lt;10% mechanical
-* <b><i>Short-term memory loss</i></b> (resets experience) > Units with more than 3/4 of the max experience, random, ~&lt;10% - ~&lt;25% mechanical
+* <b><i>Short-term memory loss</i></b> (resets experience) > Units with more than 3/4 of the max experience, random, 10% - 25% mechanical
 * <b><i>Concussion</i></b> (-30% magical damage) > Units with magical attacks, random, cumulative, 3%
 * <b><i>Wild magic</i></b> (magical attacks now are 40% chance) > Units with magical attacks, random, 2%
 * <b><i>Cowardice</i></b> (-20% accuracy) > Not mechanical, random, cumulative, 1%
