--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -44,6 +44,12 @@
 			[/else]
 		[/if]
 	    {CLEAR_VARIABLE nfw_already_wound}
+		[fire_event]
+			name=nfw_dialogue_on_death
+			[primary_unit]
+				id=$unit.id
+			[/primary_unit]
+		[/fire_event]
     [/event]
     {CLEAR_VARIABLE nfw_wounded}
 [/event]
